@@ -821,6 +821,9 @@ Change list for PernMangband
 09/03/2002 (evileye)
 - Sanity send / hp bug fixed.
 
+14/03/2002 (evileye)
+- IP banning filter added. (fixed at 5 mins just now.)
+
 ** [B] stands for Bugfix.
 ** [C] stands for Client changes.
 ** [H] stands for Hack :)
